--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.10.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "print-js": "^1.6.0",
