--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "print-js": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.1",
