Fix Railway deployment: Remove MySQL from build environment, add .railwayignore, and create fixed deployment guide

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["nodejs", "npm", "mysql"]
+nixPkgs = ["nodejs", "npm"]
 
 [phases.install]
-cmds = ["npm run install-all"]
+cmds = ["npm install"]
 
 [phases.build]
 cmds = ["npm run build"]
