--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
-    "build": "cd client && npm run build",
+    "build": "echo 'Backend only - no build needed'",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
     "setup-db": "cd server && npm run db:setup",
     "setup": "npm run install-all && npm run setup-db",
