Fix backup system: Remove 2633 empty backup files and prevent future empty backups
- Added cleanupEmptyBackups.js script to remove empty backup files
- Enhanced backupDatabase.js to properly handle failed backups
- Added automatic cleanup of empty backup files on failure
- Improved error handling and logging in backup system
- Added failure count tracking to stop repeated backup failures
- Added backup:cleanup npm script for easy access
- Fixed automated backup system to prevent spam of empty files

--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "validate:env": "node scripts/validateEnvironment.js",
     "backup": "node scripts/backupDatabase.js",
     "backup:auto": "node scripts/automatedBackup.js",
+    "backup:cleanup": "node scripts/cleanupEmptyBackups.js",
     "restore": "node scripts/restoreDatabase.js",
     "security:check": "npm run validate:env"
   },
